--- a/cmake-init/templates/common/.codespellrc
+++ b/cmake-init/templates/common/.codespellrc
@@ -1,6 +1,7 @@
 [codespell]
-builtin = clear,rare,en-GB_to_en-US
+builtin = clear,rare,en-GB_to_en-US,names,informal,code
 check-filenames =
 check-hidden =
-skip = */.git,*/build
-quiet-level = 2
+skip = */.git,*/build{if c},*/.codespellrc{end}
+quiet-level = 2{if c}
+ignore-regex = ^#include <(?:stdio)\.h>${end}
