--- a/cmake-init/templates/common/test/CMakeLists.txt
+++ b/cmake-init/templates/common/test/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.14)
 
-project(%(name)sTests LANGUAGES CXX)
+project(%(name)sTests LANGUAGES C{if cpp}XX{end})
 
 include(../cmake/project-is-top-level.cmake)
 include(../cmake/windows-set-path.cmake)
@@ -10,9 +10,9 @@ if(PROJECT_IS_TOP_LEVEL)
   enable_testing()
 endif()
 
-add_executable(%(name)s_test source/%(name)s_test.cpp)
+add_executable(%(name)s_test source/%(name)s_test.c{if cpp}pp{end})
 target_link_libraries(%(name)s_test PRIVATE %(name)s::%(name)s)
-target_compile_features(%(name)s_test PRIVATE cxx_std_%(std)s)
+target_compile_features(%(name)s_test PRIVATE c{if cpp}xx{end}_std_%(std)s)
 
 add_test(NAME %(name)s_test COMMAND %(name)s_test){type shared}
 windows_set_path(%(name)s_test %(name)s::%(name)s){end}
