Rename docs option to indicate it is for m.css

--- a/cmake-init/templates/header/CMakeLists.txt
+++ b/cmake-init/templates/header/CMakeLists.txt
@@ -60,8 +60,8 @@ if(BUILD_TESTING)
   add_subdirectory(test)
 endif()
 
-option(BUILD_DOCUMENTATION "Build documentation using Doxygen and m.css" OFF)
-if(BUILD_DOCUMENTATION)
+option(BUILD_MCSS_DOCS "Build documentation using Doxygen and m.css" OFF)
+if(BUILD_MCSS_DOCS)
   include(cmake/docs.cmake)
 endif()
 
