--- a/cmake-init/templates/c/executable/CMakeLists.txt
+++ b/cmake-init/templates/c/executable/CMakeLists.txt
@@ -69,8 +69,8 @@ add_custom_target(
     VERBATIM
 )
 
-option(BUILD_DOCUMENTATION "Build documentation using Doxygen and m.css" OFF)
-if(BUILD_DOCUMENTATION)
+option(BUILD_MCSS_DOCS "Build documentation using Doxygen and m.css" OFF)
+if(BUILD_MCSS_DOCS)
   include(cmake/docs.cmake)
 endif()
 
