--- a/cmake-init/templates/common/.github/workflows/ci.yml
+++ b/cmake-init/templates/common/.github/workflows/ci.yml
@@ -165,7 +165,7 @@ jobs:
         && sudo apt-get install doxygen -q -y
 
     - name: Configure
-      run: cmake --preset=ci-ubuntu -D BUILD_DOCUMENTATION=ON
+      run: cmake --preset=ci-ubuntu -D BUILD_MCSS_DOCS=ON
 
     - name: Build docs
       run: cmake --build build -t docs
