Add header-only C template

--- a/cmake-init/templates/common/test/CMakeLists.txt
+++ b/cmake-init/templates/common/test/CMakeLists.txt
@@ -12,7 +12,11 @@ endif()
 
 add_executable(%(name)s_test source/%(name)s_test.c{if cpp}pp{end})
 target_link_libraries(%(name)s_test PRIVATE %(name)s::%(name)s)
-target_compile_features(%(name)s_test PRIVATE c{if cpp}xx{end}_std_%(std)s)
+target_compile_features(%(name)s_test PRIVATE c{if cpp}xx{end}_std_%(std)s){if c_header}
+set_property(
+    SOURCE source/%(name)s_test.c PROPERTY
+    COMPILE_DEFINITIONS %(uc_name)s_IMPLEMENTATION
+){end}
 
 add_test(NAME %(name)s_test COMMAND %(name)s_test){type shared}
 windows_set_path(%(name)s_test %(name)s::%(name)s){end}
