--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
       fail-fast: false
 
       matrix:
-        job: [1, 2, 3, 4, 5, 6, 7]
+        job: [1, 2, 3, 4, 5, 6, 7, 8]
 
         os: [macos, ubuntu, windows]
 
@@ -41,7 +41,8 @@ jobs:
         - { job: 4, type: -e, name: "Executable (C++)", flag: "" }
         - { job: 5, type: "--c -s --examples", name: "Library (C): shared", flag: "-D BUILD_SHARED_LIBS=YES" }
         - { job: 6, type: "--c -s --examples", name: "Library (C): static", flag: "" }
-        - { job: 7, type: "--c -e", name: "Executable (C)", flag: "" }
+        - { job: 7, type: "--c -h --examples", name: "Library (C): header-only", flag: "" }
+        - { job: 8, type: "--c -e", name: "Executable (C)", flag: "" }
 
     name: ${{ matrix.name }} (${{ matrix.os }})
 
