Run spellcheck even if linter fails
If the linter fails, then spell check will still run as well, but the
job will fail as a result. This allows us to get both lint and
spellcheck errors without one preventing the other from running.

--- a/cmake-init/templates/common/.github/workflows/ci.yml
+++ b/cmake-init/templates/common/.github/workflows/ci.yml
@@ -26,6 +26,7 @@ jobs:
       run: cmake -D FORMAT_COMMAND=clang-format-11 -P cmake/lint.cmake
 
     - name: Spell check
+      if: always()
       run: cmake -P cmake/spell.cmake
 
   coverage:
