Add folders support for dev presets
The project-include-after.cmake is a good example for how to achieve
adding folders to a project without polluting the lists files themselves
with such a developer specific property of the build.

Every developer may customize the folders structure to their own liking
if it's not hardcoded into the project.

--- a/cmake-init/templates/c/executable/test/CMakeLists.txt
+++ b/cmake-init/templates/c/executable/test/CMakeLists.txt
@@ -2,6 +2,8 @@
 # depends on being added from it, i.e. the testing is done only from the build
 # tree and is not feasible from an install location
 
+project(%(name)sTests)
+
 add_executable(%(name)s_test source/%(name)s_test.c)
 target_link_libraries(%(name)s_test PRIVATE %(name)s_lib)
 target_compile_features(%(name)s_test PRIVATE c_std_%(std)s)
