Use LANGUAGES in test lists file of exe projects
This avoids enabling C++ or C (depending on the project type) when it's
unnecessary.

--- a/cmake-init/templates/c/executable/test/CMakeLists.txt
+++ b/cmake-init/templates/c/executable/test/CMakeLists.txt
@@ -2,7 +2,7 @@
 # depends on being added from it, i.e. the testing is done only from the build
 # tree and is not feasible from an install location
 
-project(%(name)sTests)
+project(%(name)sTests LANGUAGES C)
 
 add_executable(%(name)s_test source/%(name)s_test.c)
 target_link_libraries(%(name)s_test PRIVATE %(name)s_lib)
