Include source folder in Doxygen for exes
Documentation isn't generated for headers that are in the source
directory if it's not included.

--- a/cmake-init/templates/common/docs/Doxyfile.in
+++ b/cmake-init/templates/common/docs/Doxyfile.in
@@ -7,7 +7,7 @@ PROJECT_NAME = "@PROJECT_NAME@"
 PROJECT_NUMBER = "@PROJECT_VERSION@"
 
 # Add sources
-INPUT = "@PROJECT_SOURCE_DIR@/README.md" "@PROJECT_SOURCE_DIR@/include" "@PROJECT_SOURCE_DIR@/docs/pages"
+INPUT = "@PROJECT_SOURCE_DIR@/README.md" "@PROJECT_SOURCE_DIR@/include"{if include_source} "@PROJECT_SOURCE_DIR@/source"{end} "@PROJECT_SOURCE_DIR@/docs/pages"
 EXTRACT_ALL = YES
 RECURSIVE = YES
 OUTPUT_DIRECTORY = "@DOXYGEN_OUTPUT_DIRECTORY@"
