--- a/cmake-init/templates/c/shared/CMakeLists.txt
+++ b/cmake-init/templates/c/shared/CMakeLists.txt
@@ -94,5 +94,9 @@ if(ENABLE_COVERAGE)
   include(cmake/coverage.cmake)
 endif()
 
+if(CMAKE_SYSTEM_NAME STREQUAL "Windows")
+  include(cmake/open-cpp-coverage.cmake OPTIONAL)
+endif()
+
 include(cmake/lint-targets.cmake)
 include(cmake/spell-targets.cmake)
