Hide install rules if requested
The built-in `CMAKE_SKIP_INSTALL_RULES` can be used to not generate the
build system's install target and enabling this variable will make usage
of the `install()` command a warning.

--- a/cmake-init/templates/c/executable/CMakeLists.txt
+++ b/cmake-init/templates/c/executable/CMakeLists.txt
@@ -45,7 +45,9 @@ target_link_libraries(%(name)s_%(name)s PRIVATE %(name)s_lib)
 
 # ---- Install rules ----
 
-include(cmake/install-rules.cmake)
+if(NOT CMAKE_SKIP_INSTALL_RULES)
+  include(cmake/install-rules.cmake)
+endif()
 
 # ---- Developer mode ----
 
