--- a/cmake-init/templates/c/executable/CMakeLists.txt
+++ b/cmake-init/templates/c/executable/CMakeLists.txt
@@ -21,7 +21,7 @@ add_library(
 )
 
 target_include_directories(
-    %(name)s_lib
+    %(name)s_lib ${%(name)s_warning_guard}
     PUBLIC
     "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/source>"
 )
