Apply the previous commits to `run_examples` too
The delimiter for the global utility target was changed to a hyphen,
however the individual run targets that are created with the add_example
command call are left with an underscore as a delimiter, because their
names are derived from files on the filesystem, which will most likely
use underscores for delimiters as well. These individual targets however
are not part of the "tips" message printed by cmake-init, so on the
surface level every utility target appears to use hyphens.

--- a/cmake-init/templates/c/common/example/CMakeLists.txt
+++ b/cmake-init/templates/c/common/example/CMakeLists.txt
@@ -8,18 +8,15 @@ if(PROJECT_IS_TOP_LEVEL)
   find_package(%(name)s REQUIRED)
 endif()
 
-add_custom_target(run_examples)
+add_custom_target(run-examples)
 
 function(add_example NAME)
   add_executable("${NAME}" "${NAME}.c")
   target_link_libraries("${NAME}" PRIVATE %(name)s::%(name)s)
   target_compile_features("${NAME}" PRIVATE c_std_%(std)s)
-  add_custom_target(
-      "run_${NAME}"
-      COMMAND "$<TARGET_FILE:${NAME}>"
-      VERBATIM
-  )
-  add_dependencies(run_examples "run_${NAME}")
+  add_custom_target("run_${NAME}" COMMAND "${NAME}" VERBATIM)
+  add_dependencies("run_${NAME}" "${NAME}")
+  add_dependencies(run-examples "run_${NAME}")
 endfunction()
 
 add_example(empty_example)
