Rewrite the PR commit linter job in CI
The action this was using previously is gone now.

--- a/.github/workflows/lint-commits.yml
+++ b/.github/workflows/lint-commits.yml
@@ -12,13 +12,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Get PR commits
-      id: commits
-      uses: IdanHo/get-pr-commits@d94b66d146a31ef91e54a2597dee4fb523157232
-      with: { token: "${{ github.token }}" }
-
     - name: Check commits
-      run: |
-        node .github/scripts/lint-commits.js << 'JSON'
-        ${{ steps.commits.outputs.commits }}
-        JSON
+      uses: actions/github-script@v5
+      with:
+        script: await require(".github/scripts/lint-commits.js")
+          .main(github, core, context)
