--- a/cmake-init/templates/common/example/CMakeLists.txt
+++ b/cmake-init/templates/common/example/CMakeLists.txt
@@ -1,20 +1,20 @@
 cmake_minimum_required(VERSION 3.14)
 
-project(%(name)sExamples CXX)
+project({= name =}Examples CXX)
 
 include(../cmake/project-is-top-level.cmake)
 include(../cmake/folders.cmake)
 
 if(PROJECT_IS_TOP_LEVEL)
-  find_package(%(name)s REQUIRED)
+  find_package({= name =} REQUIRED)
 endif()
 
 add_custom_target(run-examples)
 
 function(add_example NAME)
   add_executable("${NAME}" "${NAME}.cpp")
-  target_link_libraries("${NAME}" PRIVATE %(name)s::%(name)s)
-  target_compile_features("${NAME}" PRIVATE cxx_std_%(std)s)
+  target_link_libraries("${NAME}" PRIVATE {= name =}::{= name =})
+  target_compile_features("${NAME}" PRIVATE cxx_std_{= std =})
   add_custom_target("run_${NAME}" COMMAND "${NAME}" VERBATIM)
   add_dependencies("run_${NAME}" "${NAME}")
   add_dependencies(run-examples "run_${NAME}")
